# homelab-agentops-control-plane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVICE_LAYER_PLAN.md  PUBLIC_SAFETY_BOUNDARY.md  RELEASE_INDEX.md  RUNBOOKS.md  SECURITY_BOUNDARIES.md  SERVICE_LAYER_PLAN.md  V0_2_LOCAL_INVENTORY_RUNTIME.md  V0_3_SAFE_INVENTORY_SUMMARY.md  V0_4_INVENTORY_QUALITY_GATE.md  V0_5_AGENT_COMMAND_CONTRACT.md  V0_6_AGENT_POLICY_ENGINE.md  V0_7_AGENT_AUDIT_LOG.md  V0_8_AGENT_APPROVAL_LEDGER.md  V0_9_AGENT_CAPABILITY_REGISTRY.md  V1_0_READ_ONLY_AGENT_SIMULATOR.md  V1_1_AGENT_DRY_RUN_PLAN_RENDERER.md  V1_2_AGENT_RUNBOOK_PREVIEW.md  V1_3_AGENT_HANDOFF_PACKET.md
examples/: agent-approval-event.example.json  agent-audit-event.example.json  agent-capability.local.example.json  agent-command.backup-dry-run.example.json  agent-command.health-check.example.json  agent-command.restart-service.requires-approval.example.json  agent-dry-run-plan.example.json  agent-handoff-packet.example.json  agent-policy.local.example.json  agent-runbook-preview.example.json  agent-simulation-result.example.json  devices.example.json  inventory.local.example.json  runbooks.example.json  services.example.json  services.local.example.json
schemas/: agent-approval-event.schema.json  agent-audit-event.schema.json  agent-capability.schema.json  agent-command.schema.json  agent-dry-run-plan.schema.json  agent-handoff-packet.schema.json  agent-policy.schema.json  agent-runbook-preview.schema.json  agent-simulation-result.schema.json  device.schema.json  (+1 more)
(+32 files in other folders)
