[project]
name = "homelab-agentops-control-plane"
version = "1.3.2"
description = "Public-safe HomeLab AgentOps control-plane prototype."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Gabriel Cruz" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
