[project]
name = "homelab-agentops-control-plane"
version = "0.6.0"
description = "Public-safe HomeLab AgentOps control-plane prototype."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Gabriel Cruz" }
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
